--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1>David Haug - Developer</h1>
         <div>
-            More info to come.
+            More info to come...
         </div>
     </body>
 </html>
